Version 0.4.2 (2008-02-21):
	
	* Added qsignal() function to utils/script.sh.in to help users
	  communicate the job state to batchelor in a well-defined way.
	  
	* Its now easy to add new items to the tab menu in about.php. Just
	  create an external HTML page or an function inside about.php and
	  add it to the tabmenu array inside the function print_about().
	  
	* Adding icons to page headers (like About, Help and Job Queue).
	
	* Adding warning state (in addition to existing pending, running,
	  finished, error and crashed).
	  
Version 0.4.1 (2008-02-20):

	* Adding message box function for reporting errors and info.
	
	* Fixed error handling in download.php, details.php and delete.php
	
Version 0.4.0 (2008-02-18):

	* Adding PHP index, help and about pages (that can be either overridden or 
	  complemented by installing corresponding HTML pages (i.e. index.html).
	
	* Improved visual interface by splitting he menu into sections.
	
Version 0.3.5 (2008-02-17):

	* Its now possible to delete multiple jobs using filter options for
	  the job queue (i.e. deleting all failed jobs).

	* Separated the submit form and queue view. Adding option (filter) to 
	  only list running and pending jobs.
	  
Version 0.3.4 (2008-02-15):

	* Added graphic and plain text mode used when displaying the queued jobs.
	
	* Moved shell script wrapper (script.sh) to utils. It shouldn't be 
	  mixed with PHP source.
	  
	* Implemented sorting and filtering of jobs in job queue. Adding a delete
	  all (in list) button is planned.
	
Version 0.3.3 (2008-02-15):

        * Various fixes for minor bugs (like E_NOTICE warnings).
	
	* Added template based UI. The interface is now easilly customized
	  by modifying the standard.ui and popup.ui templates and optionally
	  the CSS file.

Version 0.3.2 (2007-12-05):

	* Added option for running multiple jobs in parallell. Controlled
	  by BATCH_LIMIT in conf/config.inc
	  
Version 0.3.1 (2007-11-30):

	* Ported to run using PHP 4
