@@ -1,3 +1,9 @@
+Version 0.x.y (2008-mm-dd):
+
+	* Its now possible to configure menu orientation (horizontal or
+	  vertical) and menu style (graphic, text or compact) from inside
+	  conf/config.inc.
+
 Version 0.4.2 (2008-02-21):
 	
 	* Added qsignal() function to utils/script.sh.in to help users
